--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -290,6 +290,7 @@
   border-radius: 50%;
   /* use 50% for a circle */
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  margin-bottom: 2rem;
 }
 
 /**
