--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,24 +5,19 @@
 
     <div class="footer-col-wrapper">
       <div class="footer-col">
-        {%- if site.author %}
         <ul class="contact-list">
-          {% if site.author.name -%}
-          <li class="p-name">{{ site.author.name | escape }}</li>
-          {% endif -%}
-          {% if site.author.email -%}
-          <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-          {%- endif %}
+          {% if site.author.name %}<li class="p-name">{{ site.author.name | escape }}</li>{% endif %}
+          {% if site.author.email %}<li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email
+              }}</a></li>{% endif %}
         </ul>
-        {%- endif %}
       </div>
-      <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
-      </div>
-    </div>
 
-    <div class="social-links">
-      {%- include social.html -%}
+      <div class="footer-col description-social-wrapper">
+        <p class="site-description">{{ site.description | escape }}</p>
+        <div class="social-links">
+          {%- include social.html -%}
+        </div>
+      </div>
     </div>
 
   </div>
