--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -51,6 +51,31 @@ $secondary-font: 'DM Sans';
     padding-top: 0;
 }
 
+.site-header {
+    background: rgba(255, 255, 255, 0.5);
+    /* optional for readability */
+    margin: 0;
+    margin-top: 0;
+}
+
+.site-header.header {
+    margin: 0;
+    margin-top: 0;
+}
+
+header {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    z-index: 3;
+}
+
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
+
 /**
  * Nav items
  */
@@ -130,8 +155,11 @@ $secondary-font: 'DM Sans';
 */
 .site-footer .social-media-list {
     list-style: none;
+    display: flex;
+    gap: 16px;
+    /* modern & clean spacing */
+    list-style: none;
     padding: 0;
-    margin: 0;
 }
 
 .site-footer .social-item {
@@ -180,6 +208,7 @@ $secondary-font: 'DM Sans';
  * Home
  */
 .home-hero {
+    position: relative;
     width: 100vw;
     min-height: 100vh;
 
@@ -198,12 +227,21 @@ $secondary-font: 'DM Sans';
     padding: 2rem;
 }
 
-// .home-hero::before {
-//   content: "";
-//   position: absolute;
-//   inset: 0;
-//   background: rgba(0, 0, 0, 0.35);
-// }
+.home-hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* white with 50% opacity */
+    z-index: 1;
+}
+
+.home-content-box {
+    position: relative;
+    z-index: 2;
+}
 
 .home-hero>* {
     position: relative;
@@ -318,4 +356,12 @@ $secondary-font: 'DM Sans';
     /* subtle darkening */
     transform: scale(1.01);
     /* very gentle */
+}
+
+/**
+* Footnotes
+*/
+
+.footnotes {
+    font-size: 0.85em;
 }
