style: modify style in home, about and CV

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,13 @@
 ---
 layout: base
 ---
+<div class="home-description">
+  {{ site.description }}
+  <div class="home-divider"></div>
+  <div class="home-subtitle">Projects</div>
+</div>
 <div class="home-hero">
+
   <div class="home-content-box">
 
     <div class="home">
