--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="footer-col description-social-wrapper">
-        <p class="site-description">{{ site.description | escape }}</p>
+        <!-- <p class="site-description">{{ site.description | escape }}</p> -->
         <div class="social-links">
           {%- include social.html -%}
         </div>
