--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <data class="u-url" value="{{ '/' | relative_url }}"></data>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.5.2/css/all.min.css">
   <div class="wrapper">
-
+    <div class="header-divider"></div>
     <div class="footer-col-wrapper">
       <div class="footer-col">
         <ul class="contact-list">
