--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -187,7 +187,7 @@ ul.post-list li {
 ul.post-list li .post-meta {
     font-size: 0.875rem;
     /* slightly smaller than title */
-    color: #888888;
+    color: rgba($text-color, 0.7);
     /* muted grey */
     display: block;
     margin-bottom: 0.25rem;
