style: align post image and perfect colors

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -35,8 +35,9 @@
 $text-color: #1A1F16;
 $background-color: #F3F7F5;
 $primary-color: #C2D6CC;
-$secondary-color: #7F7F76;
+$secondary-color: #003252;
 $hover-color: #4b4c52;
+$secondary-hover: #001929;
 $default-font: 'Avenir Next';
 // $nav-font: 'Roboto', sans-serif;
 // $heading-font: 'Roboto', sans-serif;
@@ -206,9 +207,9 @@ ul.post-list li h3 a.post-link {
 
 /* Hover effect */
 ul.post-list li h3 a.post-link:hover {
-    color: $hover-color;
+    color: $secondary-color;
     /* hover colour */
-    transform: scale(1.01);
+    transform: scale(1.003);
     /* subtle slide on hover */
 }
 
@@ -256,11 +257,19 @@ ul.post-list li h3 a.post-link:hover {
 .footer-col-wrapper {
     display: flex;
     justify-content: center;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.footer-col description-social-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: right;
 }
 
 .site-footer .social-media-list {
     list-style: none;
-    padding: 0;
+    padding: 10%;
     margin: 0;
     display: flex;
     gap: 1rem;
@@ -272,6 +281,7 @@ ul.post-list li h3 a.post-link:hover {
     /* row direction by default */
     align-items: center;
     /* vertical align icon + text */
+    // padding-right: 10%;
     gap: 0.5rem;
     /* space between icon and text */
     position: relative;
@@ -297,7 +307,8 @@ ul.post-list li h3 a.post-link:hover {
     display: flex;
     flex-direction: column;
     /* stack all items vertically */
-    justify-content: flex-start;
+    align-items: right;
+    // justify-content: flex-end;
 }
 
 .site-footer .social-media-list {
@@ -306,6 +317,8 @@ ul.post-list li h3 a.post-link:hover {
     margin: 0;
     display: flex;
     gap: 1rem;
+    align-items: flex-end;
+    justify-content: end;
 }
 
 
@@ -330,6 +343,8 @@ ul.post-list li h3 a.post-link:hover {
 .site-footer .social-media-list .grey {
     color: inherit;
 }
+
+
 
 /**
  * Home
@@ -446,13 +461,18 @@ ul.post-list li h3 a.post-link:hover {
     /* optional: increase the global wrapper if needed */
 }
 
-/* Ensure images touch the edges of the container */
+.about-image,
+.cv-image {
+    padding-left: 5%;
+    padding-right: 1.5rem;
+}
+
 .about-image img.profile-photo,
 .cv-image img.profile-photo {
     width: 320px;
     /* slightly wider if desired */
     max-width: 100%;
-    margin-top: 2.5vw;
+    margin: 2.5vw;
 }
 
 /**
@@ -779,18 +799,26 @@ ul.post-list li h3 a.post-link:hover {
     /* optional label color */
 }
 
-.contact-link {
-    color: rgba($text-color, 0.7);
+.contact-link,
+.contact-link:visited {
+    color: $secondary-color;
     /* link color */
     text-decoration: none;
     transition: color 0.3s ease, transform 0.2s ease;
 }
 
 .contact-link:hover {
-    color: $hover-color;
+    color: $secondary-hover;
     /* hover highlight */
-    transform: scale(1.01);
+    transform: scale(1.05);
     ;
+}
+
+.contact-link,
+.contact-link:visited,
+.contact-link:hover,
+.contact-link:active {
+    text-decoration: none;
 }
 
 
